--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+CHANGES in VERSION 1.1.2
+
+* fixed typo in vignette
+
+=======================================
+
 CHANGES in VERSION 1.1.1
 
 * add functions specific for genomic data visualization
